Completing the js file, but was not the final version as i'll come back to create a popup announcing the final result and asking the player whether to replay or not

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
   background-color: #ffbf00;
   font-family: "VT323", monospace;
+  overflow: hidden;
 }
 .title {
   font-family: "VT323", monospace;
@@ -57,4 +58,8 @@ body {
 .status,
 .description {
   text-align: center;
+}
+#player-emoji,
+#computer-emoji {
+  font-family: sans-serif !important;
 }
